[gd_scene load_steps=3 format=2]

[ext_resource path="res://Cup/CupCommand.tscn" type="PackedScene" id=1]
[ext_resource path="res://CupsOrders/CupsOrders.gd" type="Script" id=2]

[node name="CupsOrders" type="Node2D"]
script = ExtResource( 2 )

[node name="ClientsQueue" type="HBoxContainer" parent="."]
margin_left = 158.0
margin_top = 134.0
margin_right = 198.0
margin_bottom = 174.0

[node name="CupsQueue" type="HBoxContainer" parent="."]
margin_left = 289.0
margin_top = 407.0
margin_right = 678.0
margin_bottom = 583.0

[node name="CupCommand" parent="." instance=ExtResource( 1 )]
visible = false
margin_left = 326.0
margin_top = 34.0
margin_right = 667.0
margin_bottom = 564.0

[connection signal="pressed" from="CupCommand" to="." method="_on_CupCommand_pressed"]
